k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
